syntax = "proto3"; //proto version

import "google/protobuf/empty.proto";

package userService; //default name of directory with proto files

option go_package = "./user"; //name of directory in GO with proto files

enum Role {
  BASIC_USER = 0;
  ADMIN = 1;
}

message UserId {
  uint32 id = 1;
}

message NewUserRequest {
  string login = 1;
  string password = 2;
  Role role = 3;
}

message UserPrivilegeRequest {
  UserId userId = 1;
  Role newRole = 2;
}

message UserResponse {
  uint32 id = 1;
}

message UsersResponse {
  repeated UserResponse users = 1;
}

service UserService {
  rpc GetUser(UserId) returns (UserResponse);
  rpc GetAllUsers(google.protobuf.Empty) returns (UsersResponse);
  rpc CreateUser(NewUserRequest) returns (google.protobuf.Empty);
  rpc DeleteUser(UserId) returns (google.protobuf.Empty);
  rpc ChangeUserPrivilege(UserPrivilegeRequest) returns (google.protobuf.Empty);
}